[gd_scene load_steps=22 format=2]

[ext_resource path="res://game_screen/game_screen.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://game_screen/character.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/interior.png" type="Texture" id=4]
[ext_resource path="res://game_screen/anvil.tscn" type="PackedScene" id=5]
[ext_resource path="res://game_screen/bellows.tscn" type="PackedScene" id=6]
[ext_resource path="res://game_screen/forge.tscn" type="PackedScene" id=7]
[ext_resource path="res://game_screen/client.tscn" type="PackedScene" id=8]
[ext_resource path="res://game_screen/gui.gd" type="Script" id=9]
[ext_resource path="res://assets/ui.png" type="Texture" id=10]
[ext_resource path="res://assets/objects.png" type="Texture" id=11]
[ext_resource path="res://assets/items.png" type="Texture" id=12]
[ext_resource path="res://ui/fader.tscn" type="PackedScene" id=13]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 480, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 496, 48, 16, 16 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Client:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 339, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Client:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "client_enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Client:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 339, 128 ), Vector2( 303, 120 ), Vector2( 267, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Client:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Client")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_waiting"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "client_kill"
tracks/0/type = "value"
tracks/0/path = NodePath("Client:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 267, 128 ), Vector2( 267, 125 ), Vector2( 267, 128 ), Vector2( 267, 125 ), Vector2( 267, 128 ), Vector2( 267, 125 ), Vector2( 267, 128 ), Vector2( 267, 125 ), Vector2( 267, 128 ), Vector2( 267, 125 ), Vector2( 267, 128 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "client_leave"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Client:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 290, 128 ), Vector2( 314.5, 120 ), Vector2( 339, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Client:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Client")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "satisfy"
}, {
"args": [  ],
"method": "go_offscreen"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "client_talk"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Client:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 267, 128 ), Vector2( 267, 127 ), Vector2( 267, 128 ), Vector2( 267, 127 ), Vector2( 267, 128 ), Vector2( 267, 127 ), Vector2( 267, 128 ) ]
}

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CloudParticles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( -37, 70 )
amount = 10
lifetime = 120.0
preprocess = 20.0
texture = SubResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 40 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.2

[node name="Interior" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="StaticClouds" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticClouds"]
position = Vector2( 57, 29 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 144, 0, 48, 32 )

[node name="Sprite2" type="Sprite" parent="StaticClouds"]
position = Vector2( 181, 48 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 144, 0, 48, 32 )

[node name="Sprite5" type="Sprite" parent="StaticClouds"]
position = Vector2( 298, 81 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 144, 0, 48, 32 )

[node name="Sprite4" type="Sprite" parent="StaticClouds"]
position = Vector2( 112, 58 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 96, 0, 48, 32 )

[node name="Sprite6" type="Sprite" parent="StaticClouds"]
position = Vector2( 37, 89 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 96, 0, 48, 32 )

[node name="Sprite3" type="Sprite" parent="StaticClouds"]
position = Vector2( 272, 24 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 96, 0, 48, 32 )

[node name="Clutter" type="Node2D" parent="."]

[node name="Tree" type="Sprite" parent="Clutter"]
position = Vector2( 303, 88 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 112, 48, 80 )

[node name="Tree2" type="Sprite" parent="Clutter"]
position = Vector2( 19, 88 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 112, 48, 80 )

[node name="Tree3" type="Sprite" parent="Clutter"]
position = Vector2( 50, 88 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 112, 48, 80 )

[node name="Gui" type="Node" parent="."]
script = ExtResource( 9 )

[node name="HeatLevel" type="TextureProgress" parent="Gui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -82.0
margin_right = 19.0
margin_bottom = -53.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 5 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 7
stretch_margin_top = 7
stretch_margin_right = 7
stretch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeatIcon" type="Sprite" parent="Gui"]
position = Vector2( 170, 89 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 448, 64, 16, 16 )

[node name="OrderProgress" type="TextureProgress" parent="Gui"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -82.0
margin_right = 80.0
margin_bottom = -53.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 5 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 7
stretch_margin_top = 7
stretch_margin_right = 7
stretch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressIcon" type="Sprite" parent="Gui"]
visible = false
position = Vector2( 232, 89 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="ScoreLabel" type="Label" parent="Gui"]
margin_left = 252.0
margin_top = 3.0
margin_right = 317.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "x0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseContainer" type="ColorRect" parent="Gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/PauseContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="Gui/PauseContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 512.0
margin_bottom = 145.0
text = "ui_pause"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/PauseContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 512.0
margin_bottom = 169.0
alignment = 1

[node name="QuitButton" type="Button" parent="Gui/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 239.0
margin_bottom = 20.0
text = "ui_quit"

[node name="ContinueButton" type="Button" parent="Gui/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 312.0
margin_bottom = 20.0
text = "ui_continue"

[node name="AnvilSlot" type="Node2D" parent="."]
position = Vector2( 196, 128 )

[node name="BellowsSlot" type="Node2D" parent="."]
position = Vector2( 92, 128 )

[node name="Bellows" parent="." instance=ExtResource( 6 )]
position = Vector2( 116, 112 )

[node name="Anvil" parent="." instance=ExtResource( 5 )]

[node name="Forge" parent="." instance=ExtResource( 7 )]
position = Vector2( 146, 128 )

[node name="Character" parent="." instance=ExtResource( 3 )]
position = Vector2( 196, 128 )

[node name="Client" parent="." instance=ExtResource( 8 )]
position = Vector2( 339, 128 )
scale = Vector2( -1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/client_enter = SubResource( 2 )
anims/client_kill = SubResource( 6 )
anims/client_leave = SubResource( 3 )
anims/client_talk = SubResource( 7 )

[node name="OrderDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HeatDecrease" type="Timer" parent="."]

[node name="Fader" parent="." instance=ExtResource( 13 )]

[node name="SoundtrackPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[connection signal="pressed" from="Gui/PauseContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Gui/PauseContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="anvil_run_ended" from="Character" to="." method="_on_Character_anvil_run_ended"]
[connection signal="bellows_lowered" from="Character" to="." method="_on_Character_bellows_lowered"]
[connection signal="bellows_raised" from="Character" to="." method="_on_Character_bellows_raised"]
[connection signal="bellows_run_ended" from="Character" to="." method="_on_Character_bellows_run_ended"]
[connection signal="died" from="Character" to="." method="_on_Character_died"]
[connection signal="progress_made" from="Character" to="." method="_on_Character_progress_made"]
[connection signal="state_changed" from="Client" to="." method="_on_Client_state_changed"]
[connection signal="timeout" from="OrderDelay" to="." method="_on_OrderDelay_timeout"]
[connection signal="timeout" from="HeatDecrease" to="." method="_on_HeatDecrease_timeout"]
[connection signal="fade_out_completed" from="Fader" to="." method="_on_Fader_fade_out_completed"]
[connection signal="finished" from="SoundtrackPlayer" to="." method="_on_SoundtrackPlayer_finished"]
